// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChapterSelection /> should render with default active props 1`] = `
<div>
  <div
    class="chapter-text-dropdown"
    id="chapter-dropdown-close-button"
    style="display: flex;"
  >
    <div
      data-testid="books-table"
    >
      <button
        type="button"
      >
        Genesis
      </button>
    </div>
  </div>
</div>
`;

exports[`<ChapterSelection /> should render with default inactive props 1`] = `
<div>
  <div
    class="chapter-text-dropdown"
    id="chapter-dropdown-close-button"
    style="display: none;"
  >
    <div
      data-testid="books-table"
    >
      <button
        type="button"
      >
        Genesis
      </button>
    </div>
  </div>
</div>
`;
